cambios en el sitio

--- a/otra.html
+++ b/otra.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/estilo.css">
-    <script defer src="js/funciones.js"></script>
+    <link rel="stylesheet" href="/css/estilo.css">
+    <script defer src="/js/funciones.js"></script>
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="otra.html">Otra</a></li>
+            <li><a href="/">Inicio</a></li>
+            <li><a href="/otra.html">Otra</a></li>
         </ul>
     </nav>
     <h1>Otra</h1>
